edit phanphoi() without Capture stones